Fixed images being offset after collapsable text shows
Added <br> tags to ingredients for formatting purposes
Fixed 'Types of Drinks' margin

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,7 +84,7 @@ section {
     position: relative;
     height: 500px;
     max-height:500px;
-    margin-bottom: 0;
+    margin-bottom: 80px;
 }
 
 #adv-search {
@@ -453,4 +453,8 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active) {
     max-height: 80.4%;
     top: 0;
     left: 0;
+}
+
+.img-responsive {
+  display: inline-block;
 }
